2000-09-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: Fix stupid error in last modification -
	missed part of method name.
	* Source/GNUmakefile: Fix to get headers installed in
	$(GNUSTEP_SYSTEM_ROOT)/Headers/Foundation again.
	* Source/Makefile.postamble:  Add code to install headers in 
	$(GNUSTEP_SYSTEM_ROOT)/Headers/gnustep/Foundation as well - is this
	really necessary?
	* Headers/Foundation/GSXML.h: Removed new methods used for HTML parser
	* Source/GSXML.m: Renamed internal methods for xml/html parser
	differentiation and declared in private interface.  Tidied to conform
	to coding standards.  Added casts to prevent compiler warnings.
	* Documentation/gsdoc/GSXML.gsdoc: added html parser info

2000-09-29  Manuel Guesdon <mguesdon@orange-concept.com>
	-- You'll need libxml2 v >= 2.2.3 to compile GSXML --
	* Headers/Foundation/GSXML.h: added GSHTMLParser and GSHTMLSAXHandler
	* Source/GSXML.m: added GSHTMLParser and GSHTMLSAXHandler
		use of _private member of parser context instead of user_data
		which is not a freely useable user_data in libxml

2000-09-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: Use OpenStep standard string initialisation.
	* Source/NSSerializer.m: Use OpenStep stanrd initializers.
	* Source/NSUnarchiver.m: ditto
	* Source/NSData.m: Simplify by removing memory management extensions.
	* Source/NSGCString.m: ditto
	* Source/NSGString.m: ditto
	* Source/NSObject.m: ditto
	* Source/NSString.m: ditto
	* Source/externs.m: Removed unused NXConstantString assignments.
	* Source/GSXML.m: ([-propertiesAsDictionary]) bugfix adding nil object
	to dictionary.  ([-externalSubset:externalID:systemID:]) method added.
	Fixes suggested by mguesdon@oxymium.net

2000-09-26  Lyndon Tremblay  <humasect@home.com>

	* Headers/Foundation/NSObject.h (CREATE_AUTORELEASE_POOL): Saves 1
	message call.
	(RECREATE_AUTORELEASE_POOL): Added to reuse existing variables.

2000-09-25  Richard Frith-Macdonald <rfm@gnu.org>